{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 28,
  "lineage": "3f5079cd-1e32-c7d1-13e5-dae20058e569",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560532546130:vpc/vpc-f6a9d88b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-b9d795d6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-e5fcee9f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f6a9d88b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-59bf4028",
            "owner_id": "560532546130",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03b2b2d40a231c987",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-102-208.compute-1.amazonaws.com",
            "public_ip": "3.212.102.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e2e5104f310ffb5",
            "arn": "arn:aws:ec2:us-east-1:560532546130:instance/i-08ea7fc9ef8239ba0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ea7fc9ef8239ba0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0903871234b6d3ce3",
            "private_dns": "ip-172-31-51-149.ec2.internal",
            "private_ip": "172.31.51.149",
            "public_dns": "ec2-54-146-56-119.compute-1.amazonaws.com",
            "public_ip": "54.146.56.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0282c692083b02c7c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2_sg-20210813104226252400000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b87e1689",
            "tags": {
              "Name": "Study AppServer"
            },
            "tags_all": {
              "Name": "Study AppServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cc7ca3eef1ba9ef6"
            ]
          },
          "dependencies": [
            "data.ct_config.config",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560532546130:security-group/sg-0cc7ca3eef1ba9ef6",
            "description": "Security group for ec2_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc7ca3eef1ba9ef6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All IPV4 ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_sg-20210813104226252400000001",
            "name_prefix": "ec2_sg-",
            "owner_id": "560532546130",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-f6a9d88b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2974584681",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cc7ca3eef1ba9ef6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-4165662286",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc7ca3eef1ba9ef6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2617749274",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc7ca3eef1ba9ef6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-741774450",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0cc7ca3eef1ba9ef6",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1321249787",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc7ca3eef1ba9ef6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}